force-app/main/default/objects/Account_And_Project__c/Account_And_Project__c.object-meta.xml
<CustomObject>
    <label>NetSuite ID</label>
    <nameField>
        <displayFormat>AP-{00}</displayFormat>
        <label>NetSuite ID AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NetSuite IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>