force-app/main/default/objects/Account_And_Project__c/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>Account__r.Name +&apos; - &apos; + Project__r.Project_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Formula</label>
    <type>Text</type>
</CustomField>