force-app/main/default/objects/Account_And_Project__c/fields/Netssuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netssuite_ID__c</fullName>
    <externalId>true</externalId>
    <label>Netsuite ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>