force-app/main/default/objects/Account_And_Project__c/fields/Shorten_Name__c.field-meta.xml
<CustomField>
    <fullName>Shorten_Name__c</fullName>
    <formula>LEFT( Account__r.Name , 70) +&apos; - &apos;+ Project__r.Project_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shorten Name</label>
    <type>Text</type>
</CustomField>