force-app/main/default/objects/Account_And_Project__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <formula>TEXT(Project__r.Subsidiary_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidiary</label>
    <type>Text</type>
</CustomField>