force-app/main/default/objects/Account_And_Project__c/fields/Subsidiary_ID__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_ID__c</fullName>
    <label>Subsidiary ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>