force-app/main/default/objects/Account_And_Project__c/fields/Sugar_GUID__c.field-meta.xml
<CustomField>
    <fullName>Sugar_GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Sugar table lf_accounts_ns_cp.id</description>
    <externalId>true</externalId>
    <label>Sugar GUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>